# sbar

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  sbar.c
examples/: meson.build  python
examples/swaybar/: config.h  meson.build  sbar-json.h  sni-server.h  sway-ipc.h  swaybar.c  xdg-icon-theme.h
include/: macros.h  sbar.h  util.h
